--- a/exhibit/package.json
+++ b/exhibit/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.26.7",
     "@babel/preset-react": "^7.26.3",
     "@eslint/js": "^9.17.0",
+    "@tailwindcss/vite": "^4.0.1",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
