--- a/exhibit/package.json
+++ b/exhibit/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.12",
+    "exhibit": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.2",
