--- a/exhibit/package.json
+++ b/exhibit/package.json
@@ -16,7 +16,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.2",
-    "three": "^0.172.0"
+    "three": "^0.172.0",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.7",
