--- a/exhibit/package.json
+++ b/exhibit/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.12",
     "exhibit": "file:",
+    "framer-motion": "^12.4.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.2",
