--- a/exhibit/package.json
+++ b/exhibit/package.json
@@ -17,6 +17,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.2",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "three": "^0.172.0",
     "typed.js": "^2.1.0"
   },
