--- a/exhibit/package.json
+++ b/exhibit/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.2",
     "react-slick": "^0.30.3",
+    "react-transition-group": "^4.4.5",
     "slick-carousel": "^1.8.1",
     "tailwind-scrollbar": "^4.0.2",
     "three": "^0.172.0",
